# ai_information_gathering_agent

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_zh.md  SECURITY.md  __init__.py  agent.py  backup_db.py  base_module.py  check_health.py  cleanup_backups.py  cli.py  config.py  create_superuser.py  docker-compose.yml  export_data.py  generate_docs.py  import_data.py  init_db.py  list_backups.py  list_commands.py  maintenance.py  manage.py  modules.yaml  package.json  requirements.txt  reset_db.py  restore_db.py  run_prod.py  run_tests.py  show_version.py  start.bat  start.sh  update_deps.py  webpack.config.js
ai_agent_framework/: README.md  (+8 more)
django_ai_agent/: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  __init__.py  backup_db.py  check_health.py  cleanup_backups.py  config.py  create_superuser.py  docker-compose.yml  export_data.py  generate_docs.py  http_client.py  import_data.py  init_db.py  list_backups.py  list_commands.py  main.py  maintenance.py  pyproject.toml  requirements.txt  reset_db.py  restore_db.py  run_prod.py  run_tests.py  setup.py  show_version.py  start.bat  start.sh  storage.py  test_installation.py  test_server.py  update_deps.py
django_ai_agent/ai_agent_project/: asgi.py  settings.py  urls.py  wsgi.py
django_ai_agent/chat_app/: urls.py  views.py
django_ai_agent/chat_app/templates/chat/: chat.html
django_ai_agent/config_app/: models.py  serializers.py  urls.py  views.py
django_ai_agent/config_app/management/commands/: load_ai_models.py
django_ai_agent/frontend_app/: urls.py  views.py
django_ai_agent/frontend_app/static/frontend/css/: dashboard.css  style.css
django_ai_agent/frontend_app/static/frontend/js/: dashboard.js
django_ai_agent/frontend_app/static/frontend/js/components/: App.js
django_ai_agent/frontend_app/templates/frontend/: base.html  dashboard.html  index.html  scan.html
django_ai_agent/keywords_app/: apps.py  models.py  serializers.py  urls.py  views.py
django_ai_agent/modules/: github_module.py  port_module.py
django_ai_agent/reports_app/: apps.py  models.py  serializers.py  urls.py  utils.py  views.py
(+8 files in other folders)
